--- a/src/app/components/adavanced-search/search-bar/search-bar.component.html
+++ b/src/app/components/adavanced-search/search-bar/search-bar.component.html
@@ -34,7 +34,7 @@
             </mat-option>
 
             <mat-divider></mat-divider>
-            <mat-option *ngFor="let option of filteredStructures |  async" [value]="option" style="height: 60px;">
+            <mat-option *ngFor="let option of (filteredStructures |  async)" [value]="option" style="height: 60px;">
                 <div class="container">
                     <i id="icon" class='far fa-hospital'></i>
                     <div class="content">
